# face_detection

./: .gitignore  CMakeLists.txt  README.md  face_detector.cpp  face_detector.h  face_detector_tool.cpp
src/: face_detector.cpp  face_detector.h  face_detector_tool.cpp  image_processor.cpp  image_processor.h  json_results_saver.cpp  json_results_saver.h  path_manager.cpp  path_manager.h  test.cpp
